--- a/fotos.html
+++ b/fotos.html
@@ -22,4 +22,16 @@
        </div>
 
        <div class="content">
-        <h1>PROJETOS FOTOGRÁFICOS </h1>
+        <h1>PROJETOS FOTOGRÁFICOS </h1> </div>
+
+        <div>
+            <img src="imagens/imagem 5.jpg" width="300" alt="imagem5">
+            <img src="imagens/imagem 6.jpg" width="300" alt="imagem6">
+            <img src="imagens/imagem 7.jpg" width="300" alt="imagem7">
+        </div>
+
+        <div class="textofotos">
+            <h3>DESALINHADA – 2024 </h3>
+            <h3>MULHER DE PEDRA NA CIDADE DE PEDRA – 2024  </h3>
+            <h3>FUSÃO - 2024   </h3>
+        </div>
