--- a/videos.html
+++ b/videos.html
@@ -23,3 +23,16 @@
 
        <div class="content">
         <h1>PROJETOS AUDIOVISUAIS </h1>
+
+        <div class="videos">
+            <a><iframe width="400" height="315" src="https://www.youtube.com/embed/6bxWefceQc0?si=ejwD0fv0aiVsCen9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  </a>
+            <a><iframe width="400" height="315" src="https://www.youtube.com/embed/QD09O9_E5Zo?si=mp6P4kn3_0HUwD-a" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+
+            </a>
+            <a><iframe width="400" height="315" src="https://www.youtube.com/embed/5xDy-xllX_g?si=Hp1J5kHubLeOelnX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </a>
+
+        </div>
+
+        <div class="textovideo">
+         <h3>UM ATO DE SOLIDARIEDADE - MINI-DOC 2024 </h3> <h3> ANÁLISE OPERAÇÃO BIG HERO – 2024 </h3>   <h3> DESVANECER – CURTA METRAGEM 2024 </h3>
+        </div>
