--- a/sobre.html
+++ b/sobre.html
@@ -22,4 +22,27 @@
        </div>
 
        <div class="content">
-        <h1>SOBRE MIM  </h1>
+        <h1>SOBRE MIM  </h1> </div>
+
+        <div class="fotosobre">
+            <img src="imagens/imagem2.jpg" width="300" alt="imagem2">
+            <img src="imagens/imagem3.jpg" width="300" alt="imagem3">
+            <img src="imagens/imagem4.jpg" width="300" alt="imagem4">
+        </div>
+
+        <div class="textosobre1">
+            <h3>HABILIDADES E COMPETÊNCIAS</h3>
+                    <li>Comprometimento</li>
+                    <li>Trabalho em equipe</li>
+                    <li>Inteligencia emocional</li>
+            </div>
+            <div class="textosobre2">
+                <h3>Experiência profissional</h3>
+                     
+                </div>
+                <div class="textosobre3">
+                    <h3>Idiomas</h3>
+                            <li>Inglês - nível C2</li>
+                            <li>Espanhol - nível C2</li>
+                    </div>
+        </div>
