--- a/fotos.html
+++ b/fotos.html
@@ -1,37 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Louisi Fonseca</title>
+    <script src="https://kit.fontawesome.com/ce94c63dce.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="estilo.css">
+    <link rel="shortcut icon" type="image/png" href="./imagens/Logotipo Louisi .png" />
 </head>
-<link rel="stylesheet" href="estilo.css">
+
 <body>
-    <div id="principal">
-        <div id="logo">
-            <a href="home.html"><img src="imagens/Logotipo Louisi .png" width="150" alt="Logo Louisi"></a>
-        </div> <!--INSERIR O MENU-->
-       <div id="navegação"> 
-        <ul id="menu">
-        <li><a href="home.html">HOME</a></li>
-        <li><a href="sobre.html">SOBRE</a></li>
-        <li><a href="fotos.html">FOTOS</a></li>
-        <li><a href="videos.html">VÍDEOS</a></li>
-        <li><a href="contato.html">CONTATOS</a></li>
-        </ul>
-       </div>
+    <header>
+        <nav class="navbar">
+            <a href="./index.html" class="logo"><img src="./imagens/Logotipo Louisi .png"></a>
+            <hr>
+            <ul class="nav-menu">
+                <li class="nav-item" id="home-btn"><a href="./index.html" target="_parent" class="nav-link">HOME</a></li>
+                /
+                <li class="nav-item"><a href="./sobre.html" target="_parent" class="nav-link">SOBRE</a></li>/
+                <li class="nav-item"><a href="#" target="_parent" class="nav-link">FOTOS</a></li>/
+                <li class="nav-item"><a href="./videos.html" target="_parent" class="nav-link">VIDEOS</a></li>/
+                <li class="nav-item"><a href="./contato.html" target="_parent" class="nav-link">CONTATO</a></li>
+            </ul>
+            <div class="menu-bar">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+    </header>
 
-       <div class="content">
-        <h1>PROJETOS FOTOGRÁFICOS </h1> </div>
-
-        <div>
-            <img src="imagens/imagem 5.jpg" width="300" alt="imagem5">
-            <img src="imagens/imagem 6.jpg" width="300" alt="imagem6">
-            <img src="imagens/imagem 7.jpg" width="300" alt="imagem7">
+    <section class="fotos">
+        <div class="header">
+            <div class="row1">
+                <h1>PROJETOS FOTOGRÁFICOS</h1>
+                <hr>
+            </div>
+            <div class="row2">
+                <div class="c-card">
+                    <img src="./imagens/imagem 5.jpg">
+                    <h3>DESALINHADA - 2024</h3>
+                </div>
+                <div class="c-card">
+                    <img src="./imagens/imagem 6.jpg">
+                    <h3>MULHER DE PEDRA NA CIDADE DE PEDRA - 2024</h3>
+                </div>
+                <div class="c-card">
+                    <img src="./imagens/imagem 7.jpg">
+                    <h3>FUSÃO - 2024</h3>
+                </div>
+            </div>
         </div>
+    </section>
+</body>
 
-        <div class="textofotos">
-            <h3>DESALINHADA – 2024 </h3>
-            <h3>MULHER DE PEDRA NA CIDADE DE PEDRA – 2024  </h3>
-            <h3>FUSÃO - 2024   </h3>
-        </div>
+<script>
+    const menuBar = document.querySelector(".menu-bar");
+    const navMenu = document.querySelector(".nav-menu");
+
+    menuBar.addEventListener("click", () => {
+        menuBar.classList.toggle('active');
+        navMenu.classList.toggle('active');
+    });
+
+    navMenu.addEventListener("click", () => {
+        menuBar.classList.toggle('active');
+        navMenu.classList.toggle('active');
+    });
+
+</script>
+
+
+</html>
