--- a/index.html
+++ b/index.html
@@ -1,39 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Louisi Fonseca</title>
+    <script src="https://kit.fontawesome.com/ce94c63dce.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="estilo.css">
+    <link rel="shortcut icon" type="image/png" href="./imagens/Logotipo Louisi .png" />
 </head>
-<link rel="stylesheet" href="estilo.css">
 <body>
-    <div id="principal">
-        <div id="logo">
-            <a href="home.html"><img src="imagens/Logotipo Louisi .png" width="150" alt="Logo Louisi"></a>
-        </div> <!--INSERIR O MENU-->
-       <div id="navegação"> 
-        <ul id="menu">
-        <li><a href="home.html">HOME</a></li>
-        <li><a href="sobre.html">SOBRE</a></li>
-        <li><a href="fotos.html">FOTOS</a></li>
-        <li><a href="videos.html">VÍDEOS</a></li>
-        <li><a href="contato.html">CONTATOS</a></li>
-        </ul>
-       </div>
-    <div> 
-        <div class="portfolio">
-        <h1>MEU PORTFÓLIO</h1>
-        <h2>Por Louisi Fonseca</h2></div>
-        <div class="apresentação">
-            <h1>Sou a Louisi, tenho 18 anos estou 
-                sou aluna do primeiro semestre do 
-                curso de Cinema e Audiovisual da ESPM </h1>
-        </div>
+        <header>
+            <nav class="navbar">
+                <a href="./index.html" class="logo"><img src="./imagens/Logotipo Louisi .png"></a>
+                <hr>
+                <ul class="nav-menu">
+                    <li class="nav-item" id="home-btn"><a href="#" target="_parent" class="nav-link">HOME</a></li>/
+                    <li class="nav-item"><a href="./sobre.html" target="_parent" class="nav-link">SOBRE</a></li>/
+                    <li class="nav-item"><a href="./fotos.html" target="_parent" class="nav-link">FOTOS</a></li>/
+                    <li class="nav-item"><a href="./videos.html" target="_parent" class="nav-link">VIDEOS</a></li>/
+                    <li class="nav-item"><a href="./contato.html" target="_parent" class="nav-link">CONTATO</a></li>
+                </ul>
+                <div class="menu-bar">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+            </nav>
+        </header>
 
-        <div class="fotinhacapa">
+        <section class="home">
+            <div class="header">
+                <din class="row">
+                    <div class="col1">
+                        <h1>MEU PORTFÓLIO</h1>
+                        <h2>Por Louisi Fonseca</h2>
+                        <p>Sou a Louisi, tenho 18 anos e 
+                            sou aluna do primeiro semestre do 
+                            curso de Cinema e Audiovisual da ESPM</p>
+                    </div>
+                    <div class="col2">
+                        <img src="./imagens/imagem1.jpg">
+                    </div>
+                </din>
+            </div>
+        </section>
+</body>
 
-            <img src="imagens/imagem1.jpg"width="500" alt="img1">
+<script>
+    const menuBar = document.querySelector(".menu-bar");
+    const navMenu = document.querySelector(".nav-menu");
 
-        </div>
-    </div>
+    menuBar.addEventListener("click", () => {
+        menuBar.classList.toggle('active');
+        navMenu.classList.toggle('active');
+    });
 
+    navMenu.addEventListener("click", () => {
+        menuBar.classList.toggle('active');
+        navMenu.classList.toggle('active');
+    });
+
+</script>
+
+
+</html>
