--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
                 <li class="nav-item" id="home-btn"><a href="./index.html" target="_parent" class="nav-link">HOME</a></li>/
                 <li class="nav-item"><a href="./sobre.html" target="_parent" class="nav-link">SOBRE</a></li>/
                 <li class="nav-item"><a href="./fotos.html" target="_parent" class="nav-link">FOTOS</a></li>/
-                <li class="nav-item"><a href="./videos.html" target="_parent" class="nav-link">VÍDEOS</a></li>/
+                <li class="nav-item"><a href="./videos.html" target="_parent" class="nav-link">VIDEOS</a></li>/
                 <li class="nav-item"><a href="#" target="_parent" class="nav-link">CONTATO</a></li>
             </ul>
             <div class="menu-bar">
